# funscript-rs

./: .gitignore  Cargo.toml  License.md  README.md
src/: funscript.rs  main.rs  video.rs
test-scripts/: joyfunscripter.funscript  openfunscripter.funscript  scriptai-january-2022.funscript
