[package]
name = "funscript-rs"
version = "0.5.0"
edition = "2021"
description = "A simple .funscript parser written in Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/JPTomorrow/funscript-rs"
categories = ["parser-implementations"]

[dependencies]
mint = "0.5.9"
native-dialog = "0.6.3"
ramer_douglas_peucker = "0.2.2"
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.92"
thiserror = "1.0.38"
