[package]
name = "funscript"
version = "0.5.2"
edition = "2021"
description = "A simple .funscript file format parser written in Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/JPTomorrow/funscript-rs"
categories = ["parser-implementations"]

[lib]
name = "funscript"
path = "src/funscript.rs"

[dependencies]
mint = "0.5.9"
# native-dialog = { version = "0.3.0"}
ramer_douglas_peucker = "0.2.2"
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.92"
thiserror = "1.0.38"
